--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 >
   <head>
     <meta charset="utf-8" />
-    <title>David Reid</title>
+    <title>Warren Flewellen</title>
     <meta
       content="David Reid, a designer ⌘ based in Hong Kong 香港. Currently working at I.T as Head of UI/UX, previously Creative Director ⟶ Previously Head of Brand and Art Director of Grana."
       name="description"
@@ -75,6 +75,9 @@
     <link href="images/webclip.png" rel="apple-touch-icon" />
   </head>
   <body class="body">
+    <button class="scroll-top">
+      <div class="arrow up"></div>
+    </button>
     <div data-w-id="8c6a0005-c0cb-30b4-f637-13aaca409e61" class="loader"></div>
     <div class="nav">
       <div class="div-block">
@@ -458,5 +461,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/webflow.js" type="text/javascript"></script>
+    <script src="js/scroll.js"></script>
   </body>
 </html>
